<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="changelogs">Version v7  \n\t\n- *Assembly edit date: 17/12/2024\n\n- (1) Support for editing smali code\n- (2) Support for editing application data\n- (3) Patch function support\n- (4) No advertising\n- (5) Added Chinese Simplified language.\n\n- *New: Translation into Russian and Ukrainian by Aleksandr ( yupiter43@gmail.com )\n- a more accurate and detailed translation into Russian and Ukrainian has been completed.\n- *New: Added the package name (Clone - com.gmail.heagoo.apkeditor.clone) so that you can use another version in parallel,\n- package name (Clone) for work creates its own folder ( ApkEditorClone).\n- *New: Removed unnecessary localization to English (values-en)\n- this folder is not needed since there is a default folder - (values​​)</string>
    <string name="about">About</string>
    <string name="add_a_file">Add a file</string>
    <string name="add_a_language">Add a language</string>
    <string name="add_key_value">Add a key/value:</string>
    <string name="all_rules_applied">All rules applied</string>
    <string name="apk_building">APK building</string>
    <string name="apk_saved_tip">APK saved to SD card: %s</string>
    <string name="apk_savedas_1">APK saved as %s</string>
    <string name="app_display">App display</string>
    <string name="app_list_order">App list ordered by</string>
    <string name="app_name">APK Editor GM</string>
    <string name="appdm_apk_build_time">APK build time</string>
    <string name="appdm_apk_file_path">APK file path</string>
    <string name="appdm_app_name">App name</string>
    <string name="appdm_app_size">App size</string>
    <string name="appdm_backup">Backup</string>
    <string name="appdm_backup_list">Backup list</string>
    <string name="appdm_basic_info">Basic info</string>
    <string name="action_db">Data base</string>
    <string name="appearance">Appearance</string>
    <string name="clean_garbage">Clean garbage</string>
    <string name="clean_garbage_summary">Click here to clean the temporary files</string>
    <string name="common_edit">Common edit</string>
    <string name="sign_version">Signature version</string>
    <string name="sign_version_summary">v1 v2 v3 v4</string>
    <string name="edit_data_root">Edit data (ROOT)</string>
    <string name="full_edit">Full edit</string>
    <string name="others">Clearing Cache and Data</string>
    <string name="rebuild_confirm_d_summary">Disabled. Will directly rebuild and sign the APK when save button is clicked</string>
    <string name="rebuild_confirmation">Rebuild confirmation</string>
    <string name="sign_apk_with">Sign APK with</string>
    <string name="sign_apk_with_summary">Specify which key is to used to sign the APK</string>
    <string name="simple_edit">Simple edit</string>
    <string name="smali_edit_summary">Enabled. The “smali” button will be shown in full edit mode</string>
    <string name="smali_editing">Smali editing</string>
    <string name="apk_decoding">APK decoding</string>
    <string name="smali_api_level">Smali API level</string>
    <string name="smali_api_summary">Not set, default level is 15</string>
    <string name="external_editor">External editor</string>
    <string name="external_editor_d_summary">Open text files in the built-in editor</string>
    <string name="decode_dir">Decoding directory</string>
    <string name="decode_dir_summary_may_change">Not set. Will use the default internal storage</string>
    <string name="file_extract_rename_summary">Choose the way how the resource files will be renamed when necessary. (for file extraction)</string>
    <string name="file_rename">File rename</string>
    <string name="output_apk_name">Output APK name</string>
    <string name="output_apk_name_summary">Specify how to name the generated APK file</string>
    <string name="preferred_language">Preferred language</string>
    <string name="check_update">Check Update</string>
    <string name="check_update_summary">Click for check update</string>
    <string name="decode_mode">Decoding mode</string>
    <string name="xml_file_edit">XML file edit</string>
    <string name="pref_title_clean_str">Clear search history in strings</string>
    <string name="pref_title_clean_res">Clear search history in resources</string>
    <string name="pref_title_clean_mf">Clear search history in manifest</string>
    <string name="pref_summary_clean_str">The search history for strings will be deleted</string>
    <string name="pref_summary_clean_res">The search history for resources will be deleted</string>
    <string name="pref_summary_clean_mf">The search history for manifest will be deleted</string>
    <string name="theme_title">Theme</string>
    <string name="action_changelogs">Changelog</string>
    <string name="layout_title">Buttons style</string>
    <string name="action_sign">Sign APK</string>
    <string name="settings_hidden">Home settings</string>
    <string name="action_prj">Projects</string>
    <string name="action_odex">ODEX patcher</string>
    <string name="action_info">Help</string>
    <string name="action_exit">Exit</string>
    <string name="action_edit">Editor settings</string>
    <string name="action_mod">About developer</string>
    <string name="decode">Decode…</string>
    <string name="hide_changelogs">Hide “Changelog”</string>
    <string name="edit_mode">Edit mode</string>
    <string name="show_odex">Show “ODEX patcher”</string>
    <string name="show_info">Show “Help”</string>
    <string name="hide_projects">Hide “Projects”</string>
    <string name="hide_exit">Hide “Exit”</string>
    <string name="hide_mod">Hide “About”</string>
    <string name="main_screen">Manage buttons</string>
    <string name="action_tools">Update tools</string>
    <string name="show_verify">Show “Verify signature”</string>
    <string name="show_sign">Show “Sign APK”</string>
    <string name="hide_tools">Hide “Update tools”</string>
    <string name="action_verify">Verify signature</string>
    <string name="show_db">Show “Data base”</string>
    <string name="settings_hidden_summary">Appearance, buttons visibility</string>
    <string name="action_edit_desc">Settings, syntax colors</string>
    <string name="additional_setting">Additional settings</string>
    <string name="additional_setting_summary">Wave animation,list animation</string>
    <string name="webku_xml">WebView</string>
    <string name="hide_credit">Hide “WebView”</string>
    <string name="md_str_help_1">APK Editor - is a super tool that can hack apk files to do lots of things for fun. It can help us to translate strings, replace icons, redesign layouts, remove ads, remove limitation in free version, etc. What it can do depends on how you use it. However, to use it well, we need a little bit professional skills.</string>
    <string name="md_str_help_10">Adds a new file to the current path.</string>
    <string name="md_str_help_11">Creates a new folder in the current path.</string>
    <string name="md_str_help_12">Search for files that contain the entered text within themselves.</string>
    <string name="md_str_help_13">Search for files that contain the entered text in their name.</string>
    <string name="md_str_help_14">Not case sensitive.</string>
    <string name="md_str_help_15">Case sensitive.</string>
    <string name="md_str_help_16">Search for entered text.</string>
    <string name="md_str_help_17">API Table</string>
    <string name="md_str_help_18">The table below specifies the API Level supported by each version of the Android platform:</string>
    <string name="md_str_help_2">Control items</string>
    <string name="md_str_help_3">Changes the orientation of the application.</string>
    <string name="md_str_help_4">Opens a dialog window to select and apply a patch.</string>
    <string name="md_str_help_5">Opens a dialog window to add new localization.</string>
    <string name="md_str_help_6">Automatic translation using the plugin.</string>
    <string name="md_str_help_7">Deselects files.</string>
    <string name="md_str_help_8">Selects all files.</string>
    <string name="md_str_help_9">Returns to the starting path.</string>
    <string name="select_channel">Select Update Channel</string>
    <string name="select_channel_summary">Select channel version update</string>
    <string name="settings_namech">Change Name And status</string>
    <string name="settings_namech_summary">Change Name And Status In Splash</string>
    <string name="update_onstart">Check automatically</string>
    <string name="update_onstart_summary">Displays an update dialog when opening the application</string>
    <string name="update_settings">App update settings</string>
    <string name="dup_0x7f06000a">Native Library Compression</string>
    <string name="dup_0x7f06000b">Compression OFF</string>
    <string name="dup_0x7f06000c">Compression ON</string>
    <string name="dup_0x7f06000d">Compression</string>
    <string name="dup_0x7f06000e">Language</string>
    <string name="dup_0x7f06000f">Copy only language (experimental)</string>
    <string name="dup_0x7f060010">Only Language</string>
    <string name="dup_0x7f060011">Anti Split</string>
    <string name="dup_0x7f060012">Language code</string>
    <string name="dup_0x7f060013">Language code</string>
    <string name="dup_0x7f060014">Mismatched packages or versions</string>
    <string name="dup_0x7f060015">Disable</string>
    <string name="dup_0x7f060016">Enable</string>
    <string name="dup_0x7f060017">Build from different packages or versions</string>
    <string name="dup_0x7f060018">Optional Module</string>
    <string name="dup_0x7f060019">Skip module files</string>
    <string name="dup_0x7f06001a">Add module files in apk</string>
    <string name="dup_0x7f06001b">Module</string>
    <string name="dup_0x7f06001c">Sign APK</string>
    <string name="dup_0x7f06001d">Signing disabled</string>
    <string name="dup_0x7f06001e">Signing enabled</string>
    <string name="dup_0x7f06001f">Sign with test signature</string>
</resources>