<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_clean"
        android:title="@string/clean_garbage"/>
    <item
        android:id="@+id/action_prj"
        android:title="@string/action_prj"/>
    <item
        android:id="@+id/action_odex"
        android:title="@string/action_odex"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_sign"
        android:title="@string/action_sign"/>
    <item
        android:id="@+id/action_verify"
        android:title="@string/action_verify"/>
    <item
        android:id="@+id/action_db"
        android:title="@string/action_db"/>
    <item
        android:id="@+id/action_tools"
        android:title="@string/action_tools"/>
    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_changelogs"
        android:title="@string/action_changelogs"/>
    <item
        android:id="@+id/action_mod"
        android:title="@string/action_mod"/>
    <item
        android:id="@+id/action_webview"
        android:title="@string/webku_xml"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"/>
</menu>
