<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="ROOT">
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="About">
        <ListPreference
            android:icon="@drawable/ic_rizal_language"
            android:entries="@array/language_key"
            android:layout="@layout/rizal_setting"
            android:title="@string/preferred_language"
            android:key="md_lang"
            android:summary="%s"
            android:entryValues="@array/language_value"/>
        <ListPreference
            android:icon="@drawable/ic_rizal_sort"
            android:entries="@array/order_key"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/app_list_order"
            android:key="AppListOrder"
            android:entryValues="@array/order_value"/>
        <Preference
            android:icon="@drawable/ic_rizal_telegram"
            android:layout="@layout/rizal_setting_bottom"
            android:title="Mod By GMods"
            android:summary="Telegram Channel">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/GMods_Dev"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/update_settings">
        <Preference
            android:icon="@drawable/ic_rizal_info"
            android:layout="@layout/rizal_setting"
            android:title="@string/check_update"
            android:key="checkForUpdates"
            android:summary="@string/check_update_summary"/>
        <ListPreference
            android:icon="@drawable/ic_rizal_line_number"
            android:entries="@array/update_channel"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/select_channel"
            android:key="channel"
            android:summary="@string/select_channel_summary"
            android:defaultValue="stable"
            android:entryValues="@array/update_channel"/>
        <SwitchPreference
            android:icon="@drawable/ic_rizal_line_number"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/update_onstart"
            android:key="updates_on_startup"
            android:summary="@string/update_onstart_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/appearance"
        android:key="Appearance">
        <Preference
            android:icon="@drawable/ic_rizal_theme"
            android:layout="@layout/rizal_setting"
            android:title="@string/theme_title"
            android:key="md_theme"/>
        <Preference
            android:icon="@drawable/ic_rizal_home"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/settings_hidden"
            android:key="hidden_settings"
            android:summary="@string/settings_hidden_summary"/>
        <Preference
            android:icon="@drawable/ic_rizal_edit"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/action_edit"
            android:key="editor_settings"
            android:summary="@string/action_edit_desc"/>
        <Preference
            android:icon="@drawable/ic_rizal_more"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/additional_setting"
            android:key="additional_settings"
            android:summary="@string/additional_setting_summary"/>
        <Preference
            android:icon="@drawable/ic_rizal_more"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/settings_namech"
            android:key="splash_setup"
            android:summary="@string/settings_namech_summary"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="AntiSplit Settings">
        <CheckBoxPreference
            android:icon="@drawable/ic_rizal_signature"
            android:layout="@layout/rizal_setting"
            android:title="@string/dup_0x7f06001f"
            android:key="signEnable"
            android:defaultValue="true"
            android:summaryOn="@string/dup_0x7f06001e"
            android:summaryOff="@string/dup_0x7f06001d"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_rizal_api"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/dup_0x7f06001b"
            android:key="moduleEnable"
            android:defaultValue="false"
            android:summaryOn="@string/dup_0x7f06001a"
            android:summaryOff="@string/dup_0x7f060019"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_rizal_rebuild"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/dup_0x7f06000d"
            android:key="extractNativeLibsEnable"
            android:defaultValue="false"
            android:summaryOn="@string/dup_0x7f06000c"
            android:summaryOff="@string/dup_0x7f06000b"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_rizal_output"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/dup_0x7f060017"
            android:key="mismatchingPackagesEnable"
            android:defaultValue="false"
            android:summaryOn="@string/dup_0x7f060016"
            android:summaryOff="@string/dup_0x7f060015"/>
        <CheckBoxPreference
            android:icon="@drawable/ic_rizal_sort"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/dup_0x7f06000e"
            android:key="languageEnable"
            android:defaultValue="false"
            android:summaryOn="@string/dup_0x7f060010"
            android:summaryOff="@string/dup_0x7f060011"/>
        <EditTextPreference
            android:icon="@drawable/ic_rizal_sort"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/dup_0x7f060012"
            android:key="languageCode"
            android:summary="@string/dup_0x7f060013"
            android:defaultValue="ru"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/apk_decoding"
        android:key="DecodeCategory">
        <ListPreference
            android:icon="@drawable/ic_rizal_decode"
            android:entries="@array/decode_mode_key"
            android:layout="@layout/rizal_setting"
            android:title="@string/decode_mode"
            android:key="DecodeMode"
            android:dialogTitle="@string/decode"
            android:entryValues="@array/decode_mode_value"/>
        <EditTextPreference
            android:icon="@drawable/ic_rizal_api"
            android:layout="@layout/rizal_setting_center"
            android:maxLength="2"
            android:title="@string/smali_api_level"
            android:key="SmaliApiLevel"
            android:summary="@string/smali_api_summary"
            android:inputType="number"/>
        <EditTextPreference
            android:icon="@drawable/ic_rizal_decode_directori"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/decode_dir"
            android:key="DecodeDirectory"
            android:summary="@string/decode_dir_summary_may_change"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/apk_building"
        android:key="ApkBuilding">
        <MultiSelectListPreference
            android:icon="@drawable/ic_rizal_signature"
            android:entries="@array/sign_names"
            android:layout="@layout/rizal_setting"
            android:title="@string/sign_version"
            android:key="SignatureVersion"
            android:summary="@string/sign_version_summary"
            android:defaultValue="@array/sign_defaults"
            android:entryValues="@array/sign_values"/>
        <com.gmail.heagoo.apkeditor.KeyListPreference
            android:icon="@drawable/ic_rizal_signature"
            android:entries="@array/signer_key"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/sign_apk_with"
            android:key="SignApkWith"
            android:summary="@string/sign_apk_with_summary"
            android:entryValues="@array/signer_value_dont_translate"/>
        <ListPreference
            android:icon="@drawable/ic_rizal_output"
            android:entries="@array/output_apkname_key"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/output_apk_name"
            android:key="OutputApkName"
            android:summary="@string/output_apk_name_summary"
            android:entryValues="@array/output_apkname_value"/>
        <SwitchPreference
            android:icon="@drawable/ic_rizal_smali_edit"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/smali_editing"
            android:key="SmaliEditingEnabled"
            android:summary="@string/smali_edit_summary"/>
        <SwitchPreference
            android:icon="@drawable/ic_rizal_rebuild"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/rebuild_confirmation"
            android:key="RebuildConfirmation"
            android:summary="@string/rebuild_confirm_d_summary"/>
        <SwitchPreference
            android:icon="@drawable/ic_rizal_extrenal_edit"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/external_editor"
            android:key="ExternalEditor"
            android:summary="@string/external_editor_d_summary"/>
        <ListPreference
            android:icon="@drawable/ic_rizal_file_rename"
            android:entries="@array/file_extract_rename_key"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/file_rename"
            android:key="FileRenameOption"
            android:summary="@string/file_extract_rename_summary"
            android:entryValues="@array/file_extract_rename_value"/>
    </PreferenceCategory>
    <Preference
        android:layout="@layout/mtrl_pref_separator"
        android:selectable="false"/>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/others">
        <Preference
            android:icon="@drawable/ic_rizal_trash"
            android:layout="@layout/rizal_setting"
            android:title="@string/pref_title_clean_str"
            android:key="clean_str"
            android:summary="@string/pref_summary_clean_str"/>
        <Preference
            android:icon="@drawable/ic_rizal_trash"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/pref_title_clean_res"
            android:key="clean_res"
            android:summary="@string/pref_summary_clean_res"/>
        <Preference
            android:icon="@drawable/ic_rizal_trash"
            android:layout="@layout/rizal_setting_center"
            android:title="@string/pref_title_clean_mf"
            android:key="clean_mf"
            android:summary="@string/pref_summary_clean_mf"/>
        <Preference
            android:icon="@drawable/ic_rizal_trash"
            android:layout="@layout/rizal_setting_bottom"
            android:title="@string/clean_garbage"
            android:key="CleanGarbage"
            android:summary="@string/clean_garbage_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
