<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/md_text_size_medium"
        android:textColor="?attr/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/md_str_help_1"/>
    <TextView
        android:text="@string/md_str_help_2"
        style="@style/MD.Category"/>
    <TextView
        android:text="@string/md_str_help_3"
        android:drawableLeft="@drawable/md_ic_action_rotate"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_4"
        android:drawableLeft="@drawable/md_ic_action_patch"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_5"
        android:drawableLeft="@drawable/md_ic_add_lang"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_6"
        android:drawableLeft="@drawable/md_ic_translate"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_7"
        android:drawableLeft="@drawable/md_ic_done"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_8"
        android:drawableLeft="@drawable/md_ic_check_all"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_9"
        android:drawableLeft="@drawable/md_ic_home"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_10"
        android:drawableLeft="@drawable/md_ic_add_file"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_11"
        android:drawableLeft="@drawable/md_ic_add_folder"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_12"
        android:drawableLeft="@drawable/searchtxt_checked"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_13"
        android:drawableLeft="@drawable/searchtxt_unchecked"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_14"
        android:drawableLeft="@drawable/ic_case_insensitive"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_15"
        android:drawableLeft="@drawable/ic_case_sensitive"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_16"
        android:drawableLeft="@drawable/md_ic_search"
        style="@style/MD.ItemDrawable"/>
    <TextView
        android:text="@string/md_str_help_17"
        style="@style/MD.Category"/>
    <TextView
        android:text="@string/md_str_help_18"
        style="@style/MD.ItemText"/>
    <include layout="@layout/md_inc_table"/>
</LinearLayout>
