<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/appearance">
        <Preference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/layout_title"
            android:key="style_buttons"/>
        <Preference
            android:layout="@layout/mtrl_pref_separator"
            android:selectable="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/mtrl_pref_category"
        android:title="@string/main_screen">
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/show_odex"
            android:key="show_odex"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/show_info"
            android:key="show_info"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/show_sign"
            android:key="show_sign"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/show_verify"
            android:key="show_verify"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/show_db"
            android:key="show_db"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_credit"
            android:key="hide_webview"
            android:defaultValue="false"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_projects"
            android:key="hide_prj"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_exit"
            android:key="hide_exit"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_tools"
            android:key="hide_tools"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_changelogs"
            android:key="hide_changelogs"/>
        <SwitchPreference
            android:layout="@layout/mtrl_pref_item"
            android:title="@string/hide_mod"
            android:key="hide_mod"/>
    </PreferenceCategory>
</PreferenceScreen>
