<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_mode"
            style="@style/MD.Dialog.Title"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/full_edit"
        android:text="@string/full_edit"
        android:drawableLeft="@drawable/ic_edit_1"
        style="@style/MD.F"/>
    <TextView
        android:id="@+id/simple_edit"
        android:text="@string/simple_edit"
        android:drawableLeft="@drawable/ic_edit_2"
        style="@style/MD.F"/>
    <TextView
        android:id="@+id/common_edit"
        android:text="@string/common_edit"
        android:drawableLeft="@drawable/ic_edit_3"
        style="@style/MD.F"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/xml_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/xml_edit"
            android:text="@string/xml_file_edit"
            android:drawableLeft="@drawable/ic_edit_4"
            style="@style/MD.F"/>
    </LinearLayout>
    <TextView
        android:id="@+id/data_edit"
        android:visibility="gone"
        android:layout_height="0dp"
        android:text="@string/edit_data_root"
        android:drawableLeft="@drawable/ic_edit_5"
        style="@style/MD.F"/>
</LinearLayout>
